feat: started data processing for model use

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a2b40258",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
     "import pandas as pd\n",
-    "import torch"
+    "import torch, json"
    ]
   },
   {
@@ -53,8 +55,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data (col: user_id, item_id, playtime, )\n",
-    "df = pd.read_csv()"
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# Load user-item data\n",
+    "with open('item_user_data.json') as f:\n",
+    "    user_data = json.load(f)\n",
+    "\n",
+    "# Load item data\n",
+    "with open('item_data.json') as f:\n",
+    "    item_data = json.load(f)\n",
+    "\n",
+    "# convert to dataframes\n",
+    "rows = []\n",
+    "for user in user_data:\n",
+    "    for item in user['items']:\n",
+    "        rows.append({\n",
+    "\n",
+    "        })"
    ]
   },
   {
@@ -72,14 +90,6 @@
    "source": [
     "# Model Implementation"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d5eebb4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
