--- a/main.ipynb
+++ b/main.ipynb
@@ -8,13 +8,10 @@
    "outputs": [],
    "source": [
     "# Setup\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch.nn as nn\n",
     "import pandas as pd\n",
-    "import torch, json"
+    "import json"
    ]
   },
   {
@@ -45,7 +42,7 @@
     "Size :  \n",
     "Items :  \n",
     "Data Range :   \n",
-    "Data Format : ItemId - playtime_forever, tags, genres  "
+    "Data Format : ItemId - playtime_forever, (tags/genres/categories)  "
    ]
   },
   {
@@ -55,8 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import json\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# Load user-item data\n",
     "with open('item_user_data.json') as f:\n",
@@ -66,13 +62,35 @@
     "with open('item_data.json') as f:\n",
     "    item_data = json.load(f)\n",
     "\n",
-    "# convert to dataframes\n",
+    "# Flatten the data to df\n",
     "rows = []\n",
     "for user in user_data:\n",
     "    for item in user['items']:\n",
     "        rows.append({\n",
+    "            'steam_id': user['steam_id'],\n",
+    "            'item_id': item['item_id'],\n",
+    "            'playtime': item['playtime_forever']\n",
+    "        })\n",
+    "userItem_df = pd.DataFrame(rows)\n",
     "\n",
-    "        })"
+    "# Convert only relevant metadata to df\n",
+    "rows = []\n",
+    "for game in item_data:\n",
+    "    rows.append({\n",
+    "        'id' : game['id'],\n",
+    "        'name' : game['app_name'],\n",
+    "        'tags' : game['tags'],\n",
+    "        'price' : game['price'],\n",
+    "    })\n",
+    "item_df = pd.DataFrame(rows)\n",
+    "\n",
+    "# Keep only games with metadata\n",
+    "valid_games = set(item_df['id'])\n",
+    "userItem_df = userItem_df[userItem_df['item_id'].isin(valid_games)]\n",
+    "\n",
+    "# Normalize playtime (0-1 scale)\n",
+    "userItem_df['playtime_norm'] = (userItem_df['playtime'] - userItem_df['playtime'].min()) / \\\n",
+    "(userItem_df['playtime'].max() - userItem_df['playtime'].min())"
    ]
   },
   {
@@ -100,6 +118,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8471ecff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from surprise import Dataset, Reader, KNNBasic\n",
+    "\n",
+    "# Prepare data\n",
+    "reader = Reader(rating_scale=(0,1))\n",
+    "data = Dataset.load_from_df(userItem_df[['steam_id', 'item_id', 'playtime_norm']], reader)\n",
+    "\n",
+    "# Train KNN model (Item-based CF)\n",
+    "trainset = data.build_full_trainset()\n",
+    "sim_opts = {'name': 'cosine', 'user_based': False}\n",
+    "model_cf = KNNBasic(sim_options=sim_opts)\n",
+    "model_cf.fit(trainset)\n",
+    "\n",
+    "# Get recommendations for a user\n",
+    "pred = model_cf.predict(uid='76561197970982479', iid='730')\n",
+    "print(f\"Predicted playtime: {pred.est:.2f}\")\n",
+    "\n",
+    "user_id = '76561197970982479'\n",
+    "played_game = set(userItem_df[userItem_df['user_id'] == user_id]['item_id'])\n",
+    "all_games = set(userItem_df)\n",
+    "unplayed_game = all_games-played_game\n",
+    "\n",
+    "# Player Predictions\n",
+    "predictions = []\n",
+    "for game_id in unplayed_game:\n",
+    "    pred = model_cf.predict(uid=user_id, iid=game_id)\n",
+    "    predictions.append((game_id,pred.est))\n",
+    "\n",
+    "# get top 5\n",
+    "top_5 = sorted(predictions, key=lambda x: -x[1][:5])\n",
+    "print(\"Top 5 Recommended Games (CF) :\")\n",
+    "for game_id, score in top_5:\n",
+    "    game_name = item_df[item_df['id'] == game_id]['title'].values[0]\n",
+    "    print(f\"{game_name} (Predicted Playtime: {score:.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7315ae6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# Create TF-IDF matrix (weights)\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "tfidx_matrix = tfidf.fit_transform(item_df['tags'])\n",
+    "\n",
+    "cos_sim = cosine_similarity(tfidx_matrix, tfidx_matrix)\n",
+    "\n",
+    "# Get recommendations for a game\n",
+    "game_idx = item_df[item_df['app_name'] == 'Counter-Strike'].index[0]\n",
+    "sim_score = list(enumerate(cos_sim[game_id]))\n",
+    "sim_score = sorted(sim_score, key=lambda x: x[1], reverse=True)[1:6] #top 5\n",
+    "rec_games = item_df.iloc[[i[0] for i in sim_score]]['app_names']\n",
+    "print(rec_games)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8667eb7b",
    "metadata": {},
@@ -108,11 +192,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e3bc72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0daf8e0d",
    "metadata": {},
    "source": [
     "# Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf23b8c6",
+   "metadata": {},
+   "source": [
+    "## Baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5f65419",
+   "metadata": {},
+   "source": [
+    "## AI-Based Model"
    ]
   },
   {
@@ -151,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
